Bug 38744 - [4.4 Regression] Bootstrap failure on x86
Summary: [4.4 Regression] Bootstrap failure on x86
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-06 15:47 UTC by H.J. Lu
Modified: 2009-01-06 19:37 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2009-01-06 15:47:48 UTC
I got

cc1: warnings being treated as errors
../../src-trunk/gcc/config/i386/i386.c: In function 'ix86_expand_call':
../../src-trunk/gcc/config/i386/i386.c:18511: error: ISO C90 forbids variable length array 'vec'
Comment 1 Jan Hubicka 2009-01-06 17:54:14 UTC
Subject: Bug 38744

Author: hubicka
Date: Tue Jan  6 17:54:02 2009
New Revision: 143127

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=143127
Log:

	PR target/38744
	* i386.c (ix86_expand_call): Use ARRAY_SIZE

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/i386.c

Comment 2 H.J. Lu 2009-01-06 19:37:23 UTC
Fixed.