re PR target/38744 (Bootstrap failure on x86)

PR target/38744
	* i386.c (ix86_expand_call): Use ARRAY_SIZE

From-SVN: r143127